<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="20dp"
    android:background="@color/white"
    android:layout_gravity="center"
    android:elevation="15dp"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/purple_200"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_note"
            android:textSize="17sp"
            android:layout_centerInParent="true"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            />
        <ImageButton
            android:id="@+id/close"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:layout_alignParentEnd="true"
            android:padding="15dp"
            android:src="@drawable/ic_baseline_close_24"
            /></RelativeLayout>
    <EditText
        android:id="@+id/notestitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/note_title"
        android:layout_margin="15dp"
        android:padding="15dp"/>

    <EditText
        android:id="@+id/editnotes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/note_description"
        android:layout_margin="15dp"
        android:padding="15dp"/>
    <Button
        android:id="@+id/add_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="@string/add"
        android:layout_gravity="end"
        android:textColor="@color/white"
        android:background="#47934A"
        />

</LinearLayout>